--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                             <constraint firstItem="KZc-fa-qmt" firstAttribute="top" secondItem="vXU-IW-GOL" secondAttribute="bottom" constant="-10" id="YeR-C4-hJI"/>
                                             <constraint firstItem="oiR-SM-6sg" firstAttribute="top" secondItem="iBz-Uh-tcf" secondAttribute="bottom" constant="-10" id="Z6F-ub-084"/>
                                             <constraint firstItem="iBz-Uh-tcf" firstAttribute="centerX" secondItem="Ptf-fu-Ue4" secondAttribute="centerX" id="gZq-Jz-uyP"/>
-                                            <constraint firstItem="oiR-SM-6sg" firstAttribute="centerX" secondItem="Ptf-fu-Ue4" secondAttribute="centerX" constant="-10" id="spg-dJ-DQG"/>
+                                            <constraint firstItem="oiR-SM-6sg" firstAttribute="centerX" secondItem="Ptf-fu-Ue4" secondAttribute="centerX" constant="-5" id="spg-dJ-DQG"/>
                                         </constraints>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kTs-7g-lp9">
@@ -353,7 +353,7 @@
                                 <rect key="frame" x="8" y="58" width="359" height="663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BG" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq3-I1-HX0">
-                                        <rect key="frame" x="56.666666666666686" y="0.0" width="246" height="215.66666666666666"/>
+                                        <rect key="frame" x="56.666666666666686" y="0.0" width="246" height="215.33333333333334"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="220"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -362,7 +362,7 @@
                                         </variation>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qwc-fI-Bfo">
-                                        <rect key="frame" x="57.666666666666686" y="215.66666666666666" width="244" height="95.666666666666657"/>
+                                        <rect key="frame" x="57.666666666666686" y="215.33333333333329" width="244" height="95.666666666666657"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLM-Es-BOa" userLabel="Direction">
                                                 <rect key="frame" x="0.0" y="0.0" width="68.666666666666671" height="95.666666666666671"/>
@@ -385,7 +385,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MinAgo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNC-P8-PbV">
-                                        <rect key="frame" x="48.666666666666657" y="311.33333333333331" width="261.66666666666674" height="96"/>
+                                        <rect key="frame" x="48.666666666666657" y="311" width="261.66666666666674" height="95.666666666666686"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -394,7 +394,7 @@
                                         </variation>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzZ-jc-k2v">
-                                        <rect key="frame" x="0.0" y="407.33333333333331" width="359" height="255.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="406.66666666666674" width="359" height="256.33333333333326"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HFL-Ye-6HR" userLabel="Clock Area Stack View">
                                                 <rect key="frame" x="62.666666666666686" y="8.0000000000000071" width="234" height="115.66666666666669"/>
