Main view - align trend arrow and delta
- Main view only
- Align the trend arrow for vertical center with delta number

--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -52,6 +52,9 @@
                                                         <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </label>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="sb7-g9-JNv" firstAttribute="centerY" secondItem="4sd-6h-LSj" secondAttribute="centerY" constant="-1" id="UVP-Zd-nVX"/>
+                                                </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iBz-Uh-tcf" userLabel="MinAgo LoopStatusStack">
                                                 <rect key="frame" x="69.666666666666686" y="174.33333333333334" width="120" height="33"/>
